# TrendingWinning

./: .gitignore  Dockerfile  README.md  data_manager_app.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
docs/: albrooks_always_in_strategy.html  backtest_kline_guide.html  channel_strategy_000852_guide.html  strategy_diagram.html  trend_strategy_000852_guide.html  usage_guide.html
tests/: test_backtest.py  test_backtest_confidence.py  test_backtest_decision_stats.py  test_backtest_drawdown.py  test_backtest_equity_exposure.py  test_backtest_equity_metrics.py  test_backtest_exit_stats.py  test_backtest_exposure.py  test_backtest_indicators.py  test_backtest_models.py  test_backtest_order_decisions.py  test_backtest_order_runner.py  test_backtest_returns.py  test_backtest_risk_metrics.py  test_backtest_statistics.py  test_backtest_trade_path.py  test_cli.py  test_data_filters.py  test_data_manager.py  test_data_symbols.py  test_detector_features.py  test_experiment_case_stats.py  test_experiment_cases.py  test_experiment_config.py  test_experiment_data.py  test_experiment_diagnostics.py  test_experiment_models.py  test_experiment_output.py  test_experiment_reporting.py  test_experiment_runner.py  test_multitimeframe.py  test_multitimeframe_strategy.py  test_order_execution.py  test_portfolio_allocation.py  test_portfolio_backtest.py  test_portfolio_equity.py  test_portfolio_models.py  test_position_gate.py  test_project_contract.py  test_range_detector.py  (+17 more)
trending_winning/: __init__.py  cli.py  strategy.py  (+1 more)
(+71 files in other folders)
