[project]
name = "trending-winning"
version = "0.1.0"
description = "TDX-only A-share minute-bar trend strategy workbench"
requires-python = ">=3.11"
dependencies = [
  "altair>=5",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "streamlit>=1.35",
]

[project.scripts]
trending-winning = "trending_winning.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
